@@ -57,6 +57,7 @@
             <argument>ffx.potential.groovy.ImportCIF</argument>
             <argument>ffx.potential.groovy.Density</argument>
             <argument>ffx.potential.groovy.Energy</argument>
+            <argument>ffx.potential.groovy.ExportQE</argument>
             <argument>ffx.potential.groovy.Fasta</argument>
             <argument>ffx.potential.groovy.FeatureMap</argument>
             <argument>ffx.potential.groovy.Frac2Cart</argument>
@@ -65,12 +66,11 @@
             <argument>ffx.potential.groovy.SaveAsP1</argument>
             <argument>ffx.potential.groovy.SaveAsPDB</argument>
             <argument>ffx.potential.groovy.SaveAsXYZ</argument>
-            <argument>ffx.potential.groovy.SaveRotamers</argument>
             <argument>ffx.potential.groovy.Solvator</argument>
             <argument>ffx.potential.groovy.Timer</argument>
             <argument>ffx.potential.groovy.Volume</argument>
             <argument>ffx.potential.groovy.VolumeArc</argument>
-            <argument>ffx.potential.groovy.XYZtoQE</argument>
+            <argument>ffx.potential.groovy.WriteRestraints</argument>
             <argument>ffx.potential.groovy.test.CoordShakeEnergy</argument>
             <argument>ffx.potential.groovy.test.EnergyOpenMM</argument>
             <argument>ffx.potential.groovy.test.Gradient</argument>
@@ -83,6 +83,7 @@
             <argument>ffx.potential.groovy.test.ReorderAtoms</argument>
             <argument>ffx.potential.groovy.test.RGNtoPDB</argument>
             <argument>ffx.potential.groovy.test.SaveAsConstantPhPDB</argument>
+            <argument>ffx.potential.groovy.test.Tornado</argument>
           </arguments>
         </configuration>
         <dependencies>
@@ -102,8 +103,10 @@
             <configuration>
               <compilerArgs>
                 <arg>-Xlint:all,-serial,-processing,-this-escape</arg>
-                <arg>-AkeywordDir=${project.parent.basedir}/src/site/asciidoc/keywords</arg>
+                <arg>-ApropertyDir=${project.parent.basedir}/src/site/asciidoc/properties</arg>
                 <arg>-proc:full</arg>
+                <arg>--add-modules</arg>
+                <arg>jdk.incubator.vector</arg>
               </compilerArgs>
               <annotationProcessorPaths>
                 <path>
@@ -117,22 +120,52 @@
         </executions>
         <version>${compiler.version}</version>
       </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>${resources.version}</version>
+        <executions>
+          <execution>
+            <id>copy-groovy-scripts</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/../../groovy</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${basedir}/src/main/groovy/ffx/potential/groovy</directory>
+                  <includes>
+                    <include>*</include>
+                  </includes>
+                </resource>
+              </resources>
+              <overwrite>true</overwrite>
+            </configuration>
+          </execution>
+          <execution>
+            <id>copy-groovy-scripts-website</id>
+            <phase>site</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/site/resources/script</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${basedir}/src/main/groovy/ffx/potential/groovy</directory>
+                  <includes>
+                    <include>*</include>
+                  </includes>
+                </resource>
+              </resources>
+              <overwrite>true</overwrite>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
     <resources>
-      <resource>
-        <directory>${basedir}/src/main/groovy/ffx/potential/groovy</directory>
-        <includes>
-          <include>*</include>
-        </includes>
-        <targetPath>${basedir}/../../groovy</targetPath>
-      </resource>
-      <resource>
-        <directory>${basedir}/src/main/groovy/ffx/potential/groovy</directory>
-        <includes>
-          <include>*</include>
-        </includes>
-        <targetPath>${basedir}/src/site/resources/scripts</targetPath>
-      </resource>
       <resource>
         <directory>${basedir}/src/main/java/ffx/potential/parameters/ff
         </directory>
@@ -169,6 +202,10 @@
         <exclusion>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>jakarta.xml.bind</groupId>
+          <artifactId>jakarta.xml.bind-api</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -262,6 +299,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <artifactId>ffx-openmm</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <artifactId>commons-configuration2</artifactId>
       <groupId>org.apache.commons</groupId>
       <version>${commons-configuration2.version}</version>
@@ -304,11 +346,6 @@
       <version>${jopenmm.version}</version>
     </dependency>
     <dependency>
-      <artifactId>jtorchani-fat</artifactId>
-      <groupId>edu.uiowa.jtorchani</groupId>
-      <version>1.0.0-beta</version>
-    </dependency>
-    <dependency>
       <artifactId>guava</artifactId>
       <groupId>com.google.guava</groupId>
       <version>${guava.version}</version>
@@ -337,6 +374,11 @@
       <artifactId>cdk-isomorphism</artifactId>
       <groupId>org.openscience.cdk</groupId>
       <version>${cdk.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>jtorchani-fat</artifactId>
+      <groupId>edu.uiowa.jtorchani</groupId>
+      <version>1.0.0-beta</version>
     </dependency>
   </dependencies>
   <description>
@@ -368,6 +410,6 @@
     <artifactId>forcefieldx</artifactId>
     <groupId>edu.uiowa.eng.ffx</groupId>
     <relativePath>../../pom.xml</relativePath>
-    <version>1.0.0-beta</version>
+    <version>1.0.0</version>
   </parent>
 </project>
