@@ -6,7 +6,7 @@
   <parent>
     <groupId>edu.uiowa.eng.ffx</groupId>
     <artifactId>forcefieldx</artifactId>
-    <version>1.0.0-beta</version>
+    <version>1.0.0</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>ffx-refinement</artifactId>
@@ -118,29 +118,8 @@
         <inherited>false</inherited>
         <executions>
           <execution>
-            <id>website-scripts</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <resources>
-                <resource>
-                  <directory>${basedir}/src/main/groovy/ffx/xray/groovy</directory>
-                  <targetPath>xray</targetPath>
-                </resource>
-                <resource>
-                  <directory>${basedir}/src/main/groovy/ffx/realspace/groovy</directory>
-                  <targetPath>realspace</targetPath>
-                </resource>
-              </resources>
-              <overwrite>true</overwrite>
-              <outputDirectory>${basedir}/src/site/resources/scripts</outputDirectory>
-            </configuration>
-          </execution>
-          <execution>
-            <id>distro-scripts</id>
-            <phase>process-resources</phase>
+            <id>copy-groovy-scripts</id>
+            <phase>compile</phase>
             <goals>
               <goal>copy-resources</goal>
             </goals>
@@ -159,7 +138,51 @@
               <outputDirectory>${basedir}/../../groovy</outputDirectory>
             </configuration>
           </execution>
+          <execution>
+            <id>copy-groovy-scripts-website</id>
+            <phase>site</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <resources>
+                <resource>
+                  <directory>${basedir}/src/main/groovy/ffx/xray/groovy</directory>
+                  <targetPath>xray</targetPath>
+                </resource>
+                <resource>
+                  <directory>${basedir}/src/main/groovy/ffx/realspace/groovy</directory>
+                  <targetPath>realspace</targetPath>
+                </resource>
+              </resources>
+              <overwrite>true</overwrite>
+              <outputDirectory>${basedir}/src/site/resources/scripts</outputDirectory>
+            </configuration>
+          </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default-compile</id>
+            <configuration>
+              <compilerArgs>
+                <arg>-Xlint:all,-serial,-processing,-this-escape</arg>
+                <arg>-ApropertyDir=${project.parent.basedir}/src/site/asciidoc/properties</arg>
+                <arg>-proc:full</arg>
+              </compilerArgs>
+              <annotationProcessorPaths>
+                <path>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>ffx-utilities</artifactId>
+                  <version>${project.version}</version>
+                </path>
+              </annotationProcessorPaths>
+            </configuration>
+          </execution>
+        </executions>
+        <version>${compiler.version}</version>
       </plugin>
     </plugins>
   </build>
